--- a/index.html
+++ b/index.html
@@ -33,21 +33,6 @@
     /></noscript>
 
     <!-- Critical Resource Preloading for Core Web Vitals -->
-    <!-- Preload hero images for LCP optimization -->
-    <link
-      rel="preload"
-      href="/peso-tracker.webp"
-      as="image"
-      fetchpriority="high"
-      type="image/webp"
-    />
-    <link
-      rel="preload"
-      href="/buen-mouse.webp"
-      as="image"
-      fetchpriority="low"
-      type="image/webp"
-    />
     <!-- Preload favicon for better perceived performance -->
     <link rel="preload" href="/favicon.ico" as="image" type="image/x-icon" />
     <!-- DNS prefetch for external domains -->
@@ -57,11 +42,11 @@
     <!-- SEO Meta Tags -->
     <meta
       name="description"
-      content="Steven Coaila Zaa - Full Stack Developer specializing in React, Swift, and modern web/mobile development. View my portfolio of innovative projects and professional experience."
+      content="Steven Coaila Zaa — Full Stack Developer creating modern web experiences with Vue 3, GSAP, and Three.js. Explore my projects and professional experience."
     />
     <meta
       name="keywords"
-      content="Steven Coaila Zaa, Full Stack Developer, React Developer, Swift Developer, JavaScript, TypeScript, Node.js, iOS Development, Web Development, Portfolio, Software Engineer, GSAP, Three.js, Vite, SwiftUI, Core Graphics, JWT Authentication, macOS Development, Frontend Engineer, Backend Developer"
+      content="Steven Coaila Zaa, Full Stack Developer, Vue, Vue 3, Vue.js, React, Swift, JavaScript, TypeScript, Node.js, Web Development, Portfolio, Software Engineer, GSAP, Three.js, Vite, SwiftUI, Core Graphics, JWT Authentication, macOS Development, Frontend Engineer, Backend Developer"
     />
     <!-- Enhanced SEO Meta Tags -->
     <meta name="application-name" content="Steven ACZ Portfolio" />
@@ -84,7 +69,7 @@
     />
     <meta
       property="og:description"
-      content="Full Stack Developer specializing in React, Swift, and modern web/mobile development. Explore my portfolio of innovative projects."
+      content="Full Stack Developer creating modern web experiences with Vue 3, GSAP, and Three.js. Explore my portfolio projects."
     />
     <meta property="og:image" content="https://stevenacz.com/og-image.webp" />
     <meta
@@ -105,7 +90,7 @@
     />
     <meta
       name="twitter:description"
-      content="Full Stack Developer specializing in React, Swift, and modern web/mobile development. Explore my portfolio of innovative projects."
+      content="Full Stack Developer creating modern web experiences with Vue 3, GSAP, and Three.js. Explore my portfolio projects."
     />
     <meta name="twitter:image" content="https://stevenacz.com/og-image.webp" />
 
@@ -146,7 +131,7 @@
             "@id": "https://stevenacz.com/#website",
             "url": "https://stevenacz.com",
             "name": "Steven Coaila Zaa - Portfolio",
-            "description": "Full Stack Developer Portfolio - React, Swift, and modern web/mobile development",
+            "description": "Full Stack Developer Portfolio - Vue 3, GSAP, Three.js, and modern web/mobile development",
             "publisher": {
               "@id": "https://stevenacz.com/#person"
             },
@@ -162,7 +147,7 @@
             "name": "Steven Coaila Zaa",
             "alternateName": "StevenACZ",
             "jobTitle": "Full Stack Developer",
-            "description": "Full Stack Developer specializing in React, Swift, and modern web/mobile development with expertise in GSAP animations, JWT authentication, and macOS app development",
+            "description": "Full Stack Developer specializing in Vue 3, React, Swift, and modern web/mobile development with expertise in GSAP animations, Three.js, JWT authentication, and macOS app development",
             "url": "https://stevenacz.com",
             "mainEntityOfPage": {
               "@id": "https://stevenacz.com/#website"
@@ -179,6 +164,10 @@
               {
                 "@type": "Thing",
                 "name": "TypeScript"
+              },
+              {
+                "@type": "Thing",
+                "name": "Vue.js"
               },
               {
                 "@type": "Thing",
@@ -199,6 +188,10 @@
               {
                 "@type": "Thing",
                 "name": "GSAP"
+              },
+              {
+                "@type": "Thing",
+                "name": "Three.js"
               },
               {
                 "@type": "Thing",
